# kelp-cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
gui/: gui.cpp  gui.h
kelp/: kelp.cpp  kelp.h
kelp/modules/: constants.h
kelp/modules/board/: board.cpp  board.h  fen.cpp  fen.h
kelp/modules/board/bitboards/: GenerateMagics.cpp  bitboard.cpp  bitboard.h  bitboard_attacks.cpp  bitboard_attacks.h  bitboard_moves.cpp  bitboard_moves.h
kelp/modules/board/bitboards/lookupTable/: lookup_tables.cpp  lookup_tables.h
kelp/modules/evaluator/: evaluator.cpp
kelp/modules/move_gen/: move_gen.cpp  move_gen.h
